fix: increase z-index of navigation to appear above heroText

--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,7 @@ nav {
     color: white;
     display: flex;
     align-items: center;
-    z-index: 10;
+    z-index: 2000;
     padding: 12px 24px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 25%);
 }
